--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -52,7 +52,7 @@
                         <a href="https://www.flaticon.com/free-icons/meat" title="meat icons">Meat icons created by BomSymbols - Flaticon</a>
                         -->
                         <radialMenu:SfRadialMenu.Items>
-                            <radialMenu:SfRadialMenuItem Image="distance.png" Command="{Binding DistanceTapped}"/>
+                            <radialMenu:SfRadialMenuItem Image="distance.png"/>
                             <radialMenu:SfRadialMenuItem Image="electricity.png"/>
                             <radialMenu:SfRadialMenuItem Image="meat.png"/>
                         </radialMenu:SfRadialMenu.Items>
