--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -1,42 +1,39 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage  xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EcoCareApp.Views.Home"
              xmlns:xtools="http://xamarin.com/schemas/2020/toolkit"
              xmlns:local="clr-namespace:EcoCareApp.Views"
              xmlns:radialMenu="clr-namespace:Syncfusion.SfRadialMenu.XForms;assembly=Syncfusion.SfRadialMenu.XForms"
-             BackgroundColor="White"
-    >
-    <!--              xmlns:sfPopup="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms" x:DataType="local:UserProfile">
- -->
-    <ContentView.Content>
+             BackgroundColor="White">
+    <ContentPage.Content>
         <xtools:TabView x:Name="mainTabs" TabStripPlacement="Bottom" IsSwipeEnabled="False" TabStripHeight="70" VerticalOptions="FillAndExpand">
-        <xtools:TabViewItem Icon="images/user_bw.png" IconSelected="images/user.png">
-            <local:UserProfile>
-              <!--  <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Kiranshastry - Flaticon</a>
+            <xtools:TabViewItem Icon="images/user_bw.png" IconSelected="images/user.png">
+                <local:UserProfile>
+                    <!--  <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Kiranshastry - Flaticon</a>
                 <a href="https://www.flaticon.com/free-icons/shopping-cart" title="shopping-cart icons">Shopping-cart icons created by Roundicons Premium - Flaticon</a>
                 -->
-            </local:UserProfile>
-        </xtools:TabViewItem>
+                </local:UserProfile>
+            </xtools:TabViewItem>
 
 
-        <xtools:TabViewItem Icon="images/home_bw.png" IconSelected="images/home.png" VerticalOptions="FillAndExpand">
-            <xtools:TabViewItem.Content>
-                <StackLayout>
+            <xtools:TabViewItem Icon="images/home_bw.png" IconSelected="images/home.png" VerticalOptions="FillAndExpand">
+                <xtools:TabViewItem.Content>
+                    <StackLayout>
 
-                    <radialMenu:SfRadialMenu x:Name="radialMenu" AnimationDuration="1000"  SelectionColor="White" 
+                        <radialMenu:SfRadialMenu x:Name="radialMenu" AnimationDuration="1000"  SelectionColor="White" 
                              CenterButtonFontSize="15" EnableCenterButtonAnimation="True" CenterButtonPlacement="Center" 
                                              RimRadius="150" 
                               RimColor="#b5e48c" SeparatorThickness="5" 
                               SeparatorColor="Black" >
-                        <!-- 1a759f -->
-                        <radialMenu:SfRadialMenu.CenterButtonView >
-                            <Grid>
-                                <StackLayout BackgroundColor="Transparent" VerticalOptions="Center">
-                                    <Image Source="plus_icon.png" IsAnimationPlaying="True"/>
-                                </StackLayout>
-                            </Grid>
-                        </radialMenu:SfRadialMenu.CenterButtonView>
+                            <!-- 1a759f -->
+                            <radialMenu:SfRadialMenu.CenterButtonView >
+                                <Grid>
+                                    <StackLayout BackgroundColor="Transparent" VerticalOptions="Center">
+                                        <Image Source="plus_icon.png" IsAnimationPlaying="True"/>
+                                    </StackLayout>
+                                </Grid>
+                            </radialMenu:SfRadialMenu.CenterButtonView>
                             <radialMenu:SfRadialMenu.CenterButtonBackView>
                                 <Grid>
                                     <StackLayout BackgroundColor="Transparent" VerticalOptions="Center">
@@ -44,7 +41,7 @@
                                     </StackLayout>
                                 </Grid>
                             </radialMenu:SfRadialMenu.CenterButtonBackView>
-                        <!--  <div>Icons made by
+                            <!--  <div>Icons made by
                            <a href="https://www.flaticon.com/authors/ilham-fitrotul-hayat" title="Ilham Fitrotul Hayat">Ilham Fitrotul Hayat</a> from
                             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com'</a>
                         </div> 
@@ -52,44 +49,44 @@
                         <a href="https://www.flaticon.com/free-icons/electricity" title="electricity icons">Electricity icons created by fjstudio - Flaticon</a>
                         <a href="https://www.flaticon.com/free-icons/meat" title="meat icons">Meat icons created by BomSymbols - Flaticon</a>
                         -->
-                        <radialMenu:SfRadialMenu.Items>
-                            <radialMenu:SfRadialMenuItem Image="distance.png"/>
-                            <radialMenu:SfRadialMenuItem Image="electricity.png"/>
-                            <radialMenu:SfRadialMenuItem Image="meat.png"/>
-                        </radialMenu:SfRadialMenu.Items>
-                    </radialMenu:SfRadialMenu>
+                            <radialMenu:SfRadialMenu.Items>
+                                <radialMenu:SfRadialMenuItem Image="distance.png"/>
+                                <radialMenu:SfRadialMenuItem Image="electricity.png"/>
+                                <radialMenu:SfRadialMenuItem Image="meat.png"/>
+                            </radialMenu:SfRadialMenu.Items>
+                        </radialMenu:SfRadialMenu>
 
                     </StackLayout>
-            </xtools:TabViewItem.Content>
-        </xtools:TabViewItem>
+                </xtools:TabViewItem.Content>
+            </xtools:TabViewItem>
 
-        
-        
-        
-        
-        <xtools:TabViewItem Icon="images/shopping_cart_bw.png" IconSelected="images/shopping_cart.png">
-            <xtools:TabViewItem.Content>
-                <StackLayout>
-                    <Label Text="SHOP SHOP SHOP"
+
+
+
+
+            <xtools:TabViewItem Icon="images/shopping_cart_bw.png" IconSelected="images/shopping_cart.png">
+                <xtools:TabViewItem.Content>
+                    <StackLayout>
+                        <Label Text="SHOP SHOP SHOP"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-                </StackLayout>
-            </xtools:TabViewItem.Content>
-        </xtools:TabViewItem>
+                    </StackLayout>
+                </xtools:TabViewItem.Content>
+            </xtools:TabViewItem>
 
 
 
-        <xtools:TabViewItem Icon="images/chart_bw.png" IconSelected="images/chart.png">
-            <xtools:TabViewItem.Content>
-                <StackLayout>
-                    <Label Text="CHARTS!!!"
+            <xtools:TabViewItem Icon="images/chart_bw.png" IconSelected="images/chart.png">
+                <xtools:TabViewItem.Content>
+                    <StackLayout>
+                        <Label Text="CHARTS!!!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-                </StackLayout>
-            </xtools:TabViewItem.Content>
-        </xtools:TabViewItem>
+                    </StackLayout>
+                </xtools:TabViewItem.Content>
+            </xtools:TabViewItem>
 
 
-            </xtools:TabView>
-    </ContentView.Content>
-</ContentView>
+        </xtools:TabView>
+    </ContentPage.Content>
+</ContentPage>
