--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -42,7 +42,7 @@
 
                             <radialMenu:SfRadialMenu x:Name="radialMenu" AnimationDuration="1000"  SelectionColor="White" 
                              CenterButtonFontSize="15" EnableCenterButtonAnimation="True" CenterButtonPlacement="Center" 
-                                             RimRadius="150" 
+                                             RimRadius="150"
                               RimColor="#b5e48c" SeparatorThickness="5" 
                               SeparatorColor="Black" >
                                 <radialMenu:SfRadialMenu.CenterButtonView >
@@ -61,9 +61,9 @@
                                 </radialMenu:SfRadialMenu.CenterButtonBackView>
 
                                 <radialMenu:SfRadialMenu.Items>
-                                    <radialMenu:SfRadialMenuItem Image="distance.png"/>
-                                    <radialMenu:SfRadialMenuItem Image="electricity.png"/>
-                                    <radialMenu:SfRadialMenuItem Image="meat.png"/>
+                                    <radialMenu:SfRadialMenuItem Image="distance.png" Command="{Binding CarCommand}"/>
+                                    <radialMenu:SfRadialMenuItem Image="electricity.png" Command="{Binding ElecCommand}"/>
+                                    <radialMenu:SfRadialMenuItem Image="meat.png" Command="{Binding MeatCommand}"/>
                                 </radialMenu:SfRadialMenu.Items>
                             </radialMenu:SfRadialMenu>
 
@@ -75,42 +75,32 @@
                         <Grid Grid.Row="2" Padding="10,10,10,10" IsVisible="{Binding Visible}">
                             <Grid.RowDefinitions>
                                 <RowDefinition x:Name="logRow" Height="30" />
-                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+
                             </Grid.RowDefinitions>
-                            <Label Text="Event Logs:" x:Name="eventLogsLabel" FontSize="16" YAlign="Center" HorizontalOptions="Start" FontAttributes="Bold" />
+                            <Label Text="Add an activity" Style="{StaticResource FormTitle}"
+                                   HorizontalOptions="Start" FontAttributes="Bold"  />
                             <ContentView Grid.Row="1" Padding="3,1,1,3">
                                 <ContentView VerticalOptions="Fill">
                                     <ScrollView x:Name="scrollView" IsClippedToBounds="true">
-                                        <StackLayout x:Name="eventLogLayout" Margin="5" />
+                                        <StackLayout x:Name="eventLogLayout" Margin="5">
+                                            <Label Text="Meat meals per week:" IsVisible="{Binding MeatTaped}"></Label>
+                                            <Entry x:Name="addMeat" IsVisible="{Binding MeatTaped}" Text="{Binding MeatText}"/>
+                                            <Label Text="Electricity usage this week(in kWh):" IsVisible="{Binding ElecTaped}"></Label>
+                                            <Entry x:Name="addElec" IsVisible="{Binding ElecTaped}" />
+                                            <Label Text="Km driven this week:" IsVisible="{Binding CarTaped}"></Label>
+                                            <Entry x:Name="addCar" IsVisible="{Binding CarTaped}" />
+
+                                        </StackLayout>
                                     </ScrollView>
                                 </ContentView>
                             </ContentView>
+                            <Button Text="Save" Command="{Binding Save}" x:Name="SaveData" Style="{StaticResource Button}" 
+                                    Grid.Row="2"/>
+
                         </Grid>
                     </Grid>
-                    <!--<PropertyView>
-                        <StackLayout>
-                            <ScrollView IsClippedToBounds="true">
-                                <StackLayout>
-                                    <Label Text="RimRadius" />
-                                    <slider:SfRangeSlider x:Name="slider" ToolTipPlacement="None" HeightRequest="75" SnapsTo="None" ShowRange="false" Orientation="Horizontal" TickPlacement="None" ShowValueLabel="false" Minimum="60" Maximum="100" />
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="auto" />
-                                            <RowDefinition Height="auto" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <Label Text="Enable Dragging" />
-                                        <Switch Grid.Column="1" x:Name="dragSwitch" IsToggled="true" />
-                                        <Label Text="Enable Rotation" Grid.Row="1" Grid.Column="0" />
-                                        <Switch Grid.Column="1" Grid.Row="1" x:Name="rotationSwitch" IsToggled="true" />
-                                    </Grid>
-                                </StackLayout>
-                            </ScrollView>
-                        </StackLayout>
-                    </l.PropertyView>-->
 
                 </xtools:TabViewItem.Content>
             </xtools:TabViewItem>
