--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -18,10 +18,11 @@
                         <a href="https://www.flaticon.com/free-icons/meat" title="meat icons">Meat icons created by BomSymbols - Flaticon</a>
                         <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Kiranshastry - Flaticon</a>
                 <a href="https://www.flaticon.com/free-icons/shopping-cart" title="shopping-cart icons">Shopping-cart icons created by Roundicons Premium - Flaticon</a>
-                -->
+    <a href="https://www.flaticon.com/free-icons/add" title="add icons">Add icons created by Pixel perfect - Flaticon</a>            
+    -->
     
     <ContentPage.Content>
-        <xtools:TabView x:Name="mainTabs" TabStripPlacement="Bottom" IsSwipeEnabled="False" TabStripHeight="70" VerticalOptions="FillAndExpand">
+        <xtools:TabView x:Name="mainTabs" TabStripPlacement="Bottom" IsSwipeEnabled="False" TabStripHeight="70" VerticalOptions="FillAndExpand" TabStripBackgroundColor="White" TabStripBorderColor="Gray">
             <xtools:TabViewItem Icon="images/user_bw.png" IconSelected="images/user.png">
                 <!--<local:UserProfile>
                    
@@ -49,39 +50,45 @@
                                 <radialMenu:SfRadialMenu.CenterButtonView>
                                     <Grid>
                                         <StackLayout BackgroundColor="Transparent" VerticalOptions="Center">
-                                            <Image Source="static_plus.png"/>
+                                            <Image Source="plus.png"/>
                                         </StackLayout>
                                     </Grid>
                                 </radialMenu:SfRadialMenu.CenterButtonView>
                                 <radialMenu:SfRadialMenu.CenterButtonBackView>
                                     <Grid>
                                         <StackLayout BackgroundColor="Transparent" VerticalOptions="Center">
-                                            <Image Source="static_plus.png"/>
+                                            <Image Source="plus.png"/>
                                         </StackLayout>
                                     </Grid>
                                 </radialMenu:SfRadialMenu.CenterButtonBackView>
 
                                 <radialMenu:SfRadialMenu.Items>
-                                    <radialMenu:SfRadialMenuItem Image="distance.png" x:Name="Car" Command="{Binding CarCommand}" ItemTapped="Car_ItemTapped"/>
-                                    <radialMenu:SfRadialMenuItem Image="electricity.png" x:Name="Elec" ItemTapped="Elec_ItemTapped" Command="{Binding ElecCommand}"/>
-                                    <radialMenu:SfRadialMenuItem Image="meat.png" x:Name="Meat" ItemTapped="Meat_ItemTapped" Command="{Binding MeatCommand}"/>
+                                    <radialMenu:SfRadialMenuItem Image="distance.png" x:Name="Car" Command="{Binding CarCommand}" />
+                                    <radialMenu:SfRadialMenuItem Image="electricity.png" x:Name="Elec" Command="{Binding ElecCommand}"/>
+                                    <radialMenu:SfRadialMenuItem Image="meat.png" x:Name="Meat" Command="{Binding MeatCommand}"/>
                                 </radialMenu:SfRadialMenu.Items>
                             </radialMenu:SfRadialMenu>
 
                         </Grid>
 
-                        <Grid Grid.Row="1" Padding="10,0,10,0" IsVisible="{Binding Visible}">
+                        <Grid Grid.Row="1" Padding="10,0,10,0" IsVisible="{Binding VisibleLine}">
                             <BoxView BackgroundColor="#e5e0e0" />
                         </Grid>
-                        <Grid Grid.Row="2" Padding="10,10,10,10" IsVisible="{Binding Visible}">
+                        <StackLayout Grid.Row="2"  Padding="10,10,10,10" IsVisible="{Binding DataFilled}">
+                            <Image Source="data_filled.png" HorizontalOptions="FillAndExpand" VerticalOptions="Start"/>
+                        </StackLayout>
+                        <Grid Grid.Row="2" Padding="10,10,10,10" IsVisible="{Binding Visible}" >
                             <Grid.RowDefinitions>
                                 <RowDefinition x:Name="logRow" Height="30" />
                                 <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
+                                <RowDefinition Height="0.75*" />
+                                <RowDefinition Height="10" />
+
+
 
                             </Grid.RowDefinitions>
                             <Label Text="Add an activity" Style="{StaticResource FormTitle}"
-                                   HorizontalOptions="Start" FontAttributes="Bold"  />
+                                   HorizontalOptions="Start" FontAttributes="Bold" IsVisible="{Binding Visible}" />
                             <ContentView Grid.Row="1" Padding="3,1,1,3">
                                 <ContentView VerticalOptions="Fill">
                                     <ScrollView x:Name="scrollView" IsClippedToBounds="true">
@@ -98,7 +105,7 @@
                                 </ContentView>
                             </ContentView>
                             <Button Text="Save" Command="{Binding Save}" x:Name="SaveData" Style="{StaticResource Button}" 
-                                    Grid.Row="2"/>
+                                    Grid.Row="2" IsVisible="{Binding Visible}"/>
 
                         </Grid>
                     </Grid>
