to do : delete graphs lines think about goals (for example, 200 kWh less elec) Server and proxy get data user graphs style user graphs tabs

--- a/EcoCareApp/EcoCareApp/Views/Graphs.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Graphs.xaml
@@ -24,7 +24,7 @@
             <chart:NumericalAxis/>
         </chart:SfChart.SecondaryAxis>
 
-        <chart:ColumnSeries ItemsSource="{Binding GraphsData}" XBindingPath="Date" YBindingPath="Value"/>
+        <chart:ColumnSeries ItemsSource="{Binding UserData}" XBindingPath="Date" YBindingPath="Value"/>
         
         
 
