--- a/EcoCareApp/EcoCareApp/Views/Graphs.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Graphs.xaml
@@ -5,7 +5,15 @@
               xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
              xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms" xmlns:views="clr-namespace:EcoCareApp.Views" xmlns:ViewModels="clr-namespace:EcoCareApp.ViewModels"
              x:DataType="ViewModels:GraphsViewModel" xmlns:models="EcoCareApp.Models.DataItem">
-
+    <ContentView.Resources>
+            <ResourceDictionary>
+            <chart:ChartColorCollection x:Key="Colors">
+                <Color>Yellow</Color>
+                <Color>Gray</Color>
+                <Color>Maroon</Color>
+            </chart:ChartColorCollection>
+        </ResourceDictionary>
+    </ContentView.Resources>
     <StackLayout x:Name="stack">
         <StackLayout.Resources>
             <ResourceDictionary>
@@ -68,7 +76,7 @@
                 </chart:ColumnSeries>
             </chart:SfChart.Series>
             <chart:SfChart.ColorModel>
-                <chart:ChartColorModel Palette="Custom" CustomBrushes="{Binding Colors}"/>
+                <chart:ChartColorModel Palette="Custom" CustomBrushes="{StaticResource Colors}"/>
             </chart:SfChart.ColorModel>
         </chart:SfChart>
     </StackLayout>
